--- a/css/ocxn.css
+++ b/css/ocxn.css
@@ -32,3 +32,14 @@ margin-bottom: 40px;
 .text-primary {
   color: #0091be !important;
 }
+
+#portfolio .portfolio-item .portfolio-link .portfolio-hover {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+  transition: all ease 1.5s;
+  opacity: 0;
+  background: rgba(217, 30, 24, 0.9);
+}
